add files to Sub directories

--- a/VendorTracker.Tests/VendorTracker.Test.csproj
+++ b/VendorTracker.Tests/VendorTracker.Test.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Vendor\Vendor.csproj" />  
+    <ProjectReference Include="..\VendorTracker\VendorTracker.csproj" />  
   </ItemGroup>
 
 </Project>
